--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
+
 <table class="table table-striped">
     <tr><th>Melon Name</th><th>Quantity</th><th>Price</th><th>Total</th></tr>
     {% for melon_id, melon in full_cart.iteritems(): %}
@@ -10,6 +11,7 @@
         </tr>
     {% endfor %}
 </table>
-<h3>Total: $27.00</h3>
+<h3>Total: {{ total }}</h3>
 <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
+<a href="/melons" class="btn btn-large btn-primary">Keep Shopping</a>
 {% endblock %}
